style/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');

body {
  font-family: 'Poppins', sans-serif;
  scroll-behavior: smooth;
}

.project-card:hover {
  transform: translateY(-5px);
  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
}

.skill-pill:hover {
  transform: scale(1.05);
}

.nav-link {
  position: relative;
}

.nav-link::after {
  content: '';
  position: absolute;
  width: 0;
  height: 2px;
  bottom: -2px;
  left: 0;
  background-color: oklch(54.1% 0.281 293.009);
  transition: width 0.3s ease;
}

.nav-link:hover::after {
  width: 100%;
}

.hero-bg {
  background: oklch(29.1% 0.149 302.717);

}

.contact-form input:focus,
.contact-form textarea:focus {
  border-color: #a6bee6;
  box-shadow: 0 0 0 3px rgba(59, 130, 246, 0.3);
}

#home {
  background-image: url(../img/sky-bg.png);
  background-size: cover;
}

.large-header {
  position: relative;
  width: 100%;
  overflow: hidden;
}

#demo-canvas {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
  pointer-events: none;
  /* Allow clicks to pass through */
}

.content-wrapper {
  position: relative;
  z-index: 2;
  /* Ensure content is above canvas */
}

